--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://football.com" target="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="header-two">
-                <img src="images/banner.png" alt="football banner picture">
+                <img src="images/banner.png" alt="banner picture of football">
             </div>
         </nav>
     </header>
